fix: P4ADEV-2590 Activity send email with template name (#221)